Minor changes in text of README

--- a/README.html
+++ b/README.html
@@ -363,8 +363,7 @@ strategy</strong> for separating CRAN packages from user-developed
 packages, with an emphasis on reproducibility, transparency, and
 long-term maintainability.</p>
 <p>This setup is shared as a <strong>personal choice</strong> for
-convenience. It is not intended to replace existing package managers or
-to provide a universal solution, but it may serve as an inspiration.</p>
+convenience that may serve as an inspiration.</p>
 <hr />
 </div>
 <div id="overview" class="section level2">
